# b-karmatic.

./: CNAME  commands.html  data.pickle  index.html  main.py  pyproject.toml  stats.txt  style.css  webserver.py
commands/: ping.py
txt files/: !cogs.txt  Saves.txt  c prefix.txt  message.txt  num-fun.txt
x005602219/: a  a.py  b.py  bawt.py  et6.py  f.py  lc.py  m.py  msc.py  text.py  vc.py
