[tool.poetry]
name = "repl_python3_b-karmatic"
version = "0.1.0"
description = ""
authors = ["zorozoro1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
flask = "^2.0.1"
praw = "^7.2.0"
youtube-dl = "^2021.5.16"
discord = "^1.0.1"
pymongo = "^3.11.4"
dnspython = "^2.1.0"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
